# sinai-billiards-3d

./: Cargo.toml  LICENSE  README.md
.github/: slang-setup.sh
.github/workflows/: rust.yml
scripts/: compile-shaders.sh
src/: camera.rs  ergodic.rs  lib.rs  lyapunov.rs  main.rs  physics.rs  scene.rs  tangent.rs
src/shaders/: shaders.slang  shaders.wgsl
tests/: ergodic_tests.rs  physics_tests.rs
