[package]
name = "sinai-billiards-3d"
version = "0.1.0"
edition = "2024"

[lib]
name = "billiards_logic"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
egui = "0.33.3"
env_logger = "0.11.10"
glam = "0.32.1" # Use this for 3D Linear Algebra and apparently SIMD accelerations
log = "0.4.29"
nalgebra = "0.35.0"
rand = "0.10.1"
wgpu = "29.0.3"
winit = "0.30.13"
